Changed Favs system

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
                     </div>
                     <div id="mid-right-right">
                         <div id="black-buttons">
-                            <button class="black-button"></button>
-                            <button class="black-button"></button>
+                            <button onclick="favDown()" class="black-button">⬅</button>
+                            <button onclick="favUp()" class="black-button">➡</button>
                         </div>
                         <button onclick="savePokemon()" class="yellow-button"></button>
                     </div>
