Polished favorites system

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <div id="bot-mid">
                         <div id="button-panel">
                             <button onclick="changeVoice()" class="bar-light dark-red"><p>Change Voice</p></button>
-                            <button class="bar-light blue"></button>
+                            <button onclick="savePokemon()" class="bar-light blue">Save Pokemon</button>
                         </div>
                         <div id="lcd">
                 
@@ -104,7 +104,7 @@
                             <button onclick="favDown()" class="black-button">⬅</button>
                             <button onclick="favUp()" class="black-button">➡</button>
                         </div>
-                        <button onclick="savePokemon()" class="yellow-button"></button>
+                        <button onclick="deleteFav()" class="yellow-button">✖</button>
                     </div>
                 </div>
                 <div id="bottom-right">
