--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
 </head>
 <body>
     <div id="main">
-
+        <div id="oak-chat">
+            <div id="oak-banner">
+                <h3>⚪</h3>
+                <h1>Prof. Oak Live Chat</h1>
+                <button>🔽</button>
+            </div>
+            <div id="chat-window"></div>
+            <div id="user-input">
+                <input id="prompt" type="text">
+                <button id="chat-send" onclick="sendChat()">Send</button>
+            </div>
+        </div>
         <div id="poke-search">
             <select id="search-select">
                 <option value="name">Name</option>
